--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,15 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.10-0.0.1"
+version = "1.8-1.4"
 group= "HxCKDMS.MoreWorldGen"
 archivesBaseName = "MoreWorldGen"
 
 minecraft {
-    version = "1.7.10-10.13.2.1230"
-    assetDir = "eclipse/assets"
+    version = "1.8-11.14.0.1285-1.8"
+    runDir = "eclipse"
+
+    mappings = "snapshot_nodoc_20141130"
 }
 
 dependencies {
@@ -40,6 +42,12 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+}
+
+jar {
+        manifest {
+        attributes 'FMLAT': 'accessTransformer.cfg'
+    }
 }
 
 processResources
