--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,13 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.10-0.0.1"
-group= "HxCKDMS.MoreWorldGen"
-archivesBaseName = "MoreWorldGen"
+version = "1.7.10-1.0"
+group= "HxCKDMS.HxCWorldGen"
+archivesBaseName = "HxCWorldGen"
 
 minecraft {
     version = "1.7.10-10.13.2.1230"
-    assetDir = "eclipse/assets"
+    runDir = "eclipse"
 }
 
 dependencies {
