--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.10-1.0a"
+version = "1.7.10-1.0b"
 group= "HxCKDMS.HxCWorldGen"
 archivesBaseName = "HxCWorldGen"
 
