--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
 # Created by .gitignore support plugin (hsz.mobi)
-MoreWorldGen.iml
-MoreWorldGen.ipr
-MoreWorldGen.iws
-.classpath
-.project
+### Java template
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+.*
+!.gitignore
+*.iml
+*.iws
+*.ipr
+*.db
+*.log
 eclipse
-.settings
-.gradle
+out
 build
