--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ archivesBaseName = "HxCWorldGen"
 minecraft {
     version = "1.7.10-10.13.4.1448-1.7.10"
     runDir = "eclipse"
+    mappings = "stable_12"
 }
 
 processResources
