oops java versions bump

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
 
 apply plugin: 'forge'
 
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
+
 version = "1.7.10-1.4.0"
 group= "HxCKDMS.HxCWorldGen"
 archivesBaseName = "HxCWorldGen"
